--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a class="font-awesome" href="https://www.linkedin.com/in/weiqifeng97/" target="_blank">
                         <i class="fab fa-linkedin fa-2x faa-tada animated-hover "></i></a>
                 </p>
-                <a href="resume.pdf" class="btn btn-lg btn-outline-info" target="_blank" style="margin-top: 20px">
+                <a href="resume.pdf" class="btn btn-lg btn-outline-info" target="_blank" style="margin-top: 20px" download>
                     Download Resume
                 </a>
             </div>
