--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a class="font-awesome" href="https://www.linkedin.com/in/weiqifeng97/" target="_blank">
                         <i class="fab fa-linkedin fa-2x faa-tada animated-hover "></i></a>
                 </p>
-                <a href="resume.pdf" class="btn btn-lg btn-outline-info" target="_blank" style="margin-top: 20px" download>
+                <a href="weiqi_feng_resume.pdf" class="btn btn-lg btn-outline-info" target="_blank" style="margin-top: 20px" download>
                     Download Resume
                 </a>
             </div>
@@ -404,7 +404,7 @@
         </p>
     </div>
     <div class="col-2" style="text-align: center">
-        <a href="resume.pdf" class="btn btn-lg btn-outline-info" target="_blank">
+        <a href="weiqi_feng_resume.pdf" class="btn btn-lg btn-outline-info" target="_blank" download>
             Download Resume
         </a>
     </div>
