--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 </p>
                 <p>
                     <br><i class="fas fa-mobile-alt faa-ring animated-hover"></i>
-                    <a href="tel:4134091314" style="color: whitesmoke; text-decoration: none; padding-left: 5px">
-                        (413)-409-1314
+                    <a href="tel:4134165155" style="color: whitesmoke; text-decoration: none; padding-left: 5px">
+                        (413)-416-5155
                     </a>
                     <br><i class="fas fa-envelope faa-horizontal animated-hover"></i>
                     <a href="mailto:weiqifeng@umass.edu"
@@ -183,7 +183,7 @@
 <div id="edu-exp" class="row main-content">
     <div class="col-3 offset-3">
         <p class="content-title">Education</p>
-        <p class="content-subtitle">WHAT I'VE LEARNED</p>
+        <p class="content-subtitle">WHERE I'VE LEARNED</p>
         <p style="margin-bottom: 0"><b>UMass Amherst</b></p>
         <p style="margin-bottom: 2px">Amherst, MA</p>
         <p style="margin-bottom: 0">Sep 2019 - Anticipated May 2025</p>
@@ -200,9 +200,12 @@
     <div class="col-3">
         <p class="content-title">Experience</p>
         <p class="content-subtitle">WHERE I'VE WORKED</p>
-        <p style="margin-bottom: 0; word-break: normal"><b>Sep 2019 &mdash; Aug 2020</b>, UMass Cybersecurity Institute
+        <p style="margin-bottom: 0; word-break: normal"><b>Sep 2019 &mdash; Present</b>, UMass Cybersecurity Institute
         </p>
         <p><i>Graduate Research Assistant</i></p>
+        <p style="margin-bottom: 0; word-break: normal"><b>Jun 2021 &mdash; Sep 2021</b>, PathAI
+        </p>
+        <p><i>Software Engineer</i></p>
         <p style="margin-bottom: 0; word-break: normal"><b>May 2018 &mdash; June 2019</b>, Wheaton College Lexomics
             Research</p>
         <p><i>Software Development Lead</i></p>
