--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <li>Mars Faculty-Student Research Grant</li>
             <li>Balfour Scholarship</li>
             <li>Phi Beta Kappa</li>
-            <li>May fellow</li>
+            <li>May Fellow</li>
         </ul>
     </div>
 </div>
